# fpx

./: Cargo.toml  README.md
benches/: mod.rs
benches/comparisons/: libm.rs  mod.rs
benches/functions/: mod.rs
notes/: references.bib
scripts/: function_gen.sh
src/: lib.rs
src/core/: exp2i.rs  fp4.rs  fp6.rs  fp8.rs  mod.rs  rep.rs  scale.rs
src/core/tests/: fp4.rs  fp6.rs  fp8.rs  mod.rs
src/design/: mod.rs
src/design/cheb/: approx.rs  mod.rs
src/design/cheb/tests/: mod.rs
src/design/floats/: bfp16.rs  fp4.rs  fp6.rs  fp8.rs  mod.rs
src/design/functions/: mod.rs  remez.rs  sqrt_f.rs  sqrt_generate.rs
src/design/functions/tests/: mod.rs  sqrt.rs  utils.rs
src/design/real/: mod.rs  real.rs
src/design/remez/: create.rs  mod.rs  remez.rs  remez_opt.rs
src/design/remez/tests/: mod.rs
