[package]
name = "fpx"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Floating-Point eXtensions: IEEE-754 utilities and optimal minimax approximations of standard math library functions for strict no_std environments."
repository = "https://github.com/atmopierce/fpx"
readme = "README.md"
keywords = ["no_std", "ieee754", "math", "trig", "approximation"]
categories = ["no-std", "mathematics", "science"]

[lib]
bench = false
crate-type = ["rlib"]

[features]
# No default features — all core only.
default = ["core"]
core = []
design = []
std = []
plots = ["std"]
units = []

# Optional extras for specialized targets, but still no alloc.
simd = []
x86_sse2 = ["simd"]
aarch64_neon = ["simd"]

[dependencies]
# No dependencies that require std or alloc.
aether_core = { git="https://github.com/AtmoPierce/aether.git", package = "aether_core"}
num-traits = {version = "*"}

[dev-dependencies]
# Only used in tests/benches/examples that run with std, never in the library itself.
libm = { version = "0.2", default-features = false }
aether_test = { git="https://github.com/AtmoPierce/aether.git", package = "aether_test"}
aether_viz  = { git="https://github.com/AtmoPierce/aether.git", package = "aether_viz"}

#[[bench]]
#name = "trig"
#harness = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"

[package.metadata.docs.rs]
# Docs should still build with std for examples.
features = ["simd"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "thumbv7em-none-eabihf"]
