[package]
name = "fpx"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Floating-Point eXtensions: IEEE-754 utilities and optimal minimax approximations of standard math library functions for strict no_std environments."
repository = "https://github.com/atmopierce/fpx"
readme = "README.md"
keywords = ["no_std", "ieee754", "math", "trig", "approximation"]
categories = ["no-std", "mathematics", "science"]

[lib]
bench = false
crate-type = ["rlib"]

[features]
# Default: core only, no std, no f16/f128, no plotting.
default = ["core"]

core = []
design = []              # enables design-time stuff in *this* crate
std = ["aether_core/std", "aether_viz/svg"]
f16 = ["aether_core/f16"]                    # forward f16 to aether_core
f128 = ["aether_core/f128"]                  # forward f128 to aether_core

# plots require std + viz
plots = ["dep:aether_viz"]

serde = ["dep:serde", "dep:serde_json"]

[dependencies]
aether_core = {git = "https://github.com/AtmoPierce/aether.git", package = "aether_core", default-features = false}
aether_opt = {git = "https://github.com/AtmoPierce/aether.git", package = "aether_opt", default-features = false}
num-traits = { version = "*" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
aether_viz = {git = "https://github.com/AtmoPierce/aether.git", package = "aether_viz", optional = true, default-features = false}

[dev-dependencies]
libm = { version = "0.2", default-features = false }
aether_test = {git = "https://github.com/AtmoPierce/aether.git", package = "aether_test"}

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"

[package.metadata.docs.rs]
features = ["simd"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "thumbv7em-none-eabihf"]

[[bench]]
name = "f16_error"
harness = true
required-features = ["design", "plots", "f128"]

[[bench]]
name = "f32_error"
harness = true
required-features = ["design", "plots", "f128"]

[[bench]]
name = "f64_error"
harness = true
required-features = ["design", "plots", "f128"]

[[bench]]
name = "f128_error"
harness = true
required-features = ["design", "plots", "f128"]
